# brief_introduction_to_machine_learning_and_computer_vision

./: .gitignore  README.md  calculator.ipynb  mnist_train.ipynb  pyproject.toml
