[project]
name = "brief-introduction-to-machine-learning-and-computer-vision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab>=4.3.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "scikit-learn>=1.5.2",
    "tqdm>=4.66.6",
]
